# remarkable-obsidian-sync

./: .gitignore  .sync_ignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  remarkable_to_obsidian.py  requirements.txt  sync.sh
tests/: test_sync.py
